Update page title for AI consultant

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roger D. Amos | AI Integration & Automation Consultant</title>
+    <title>Roger D. Amos | Fort Smith AI & Automation Consultant</title>
     <style>
         * {
             margin: 0;
