--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     <section class="value-prop">
         <div class="container">
             <div class="section-header">
-                <h2>Why Work With Me?</h2>
+                <h2 style="color:white">Why Work With Me?</h2>
                 <p style="color: rgba(255, 255, 255, 0.9);">Numbers that speak louder than words</p>
             </div>
             <div class="value-grid">
